--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
    <header>
     <nav class="navbar navbar-expand-lg bg-white sticky-top shadow p-3 mb-5 bg-body rounded">
         <div class="container">
-          <a class="navbar-brand" href="#">Pro Edu</a>
+          <a class="navbar-brand" href="#">
+            <h1>Pro Edu</h1>
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -42,7 +44,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Register</a>
               </li>
-            <div class="btn text-info border border-info border-2">Register</div>
+            <div class="btn text-info border border-info border-2 px-4">Register</div>
             </ul>
           </div>
         </div>
@@ -52,8 +54,49 @@
  <main>
     <!-- banner area start -->
     <section class="container">
-
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="img-fluid" src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h1 class="display-1">Get Stated Digital Learning</h1>
+                  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout..</p>
+                  <div class="btn btn-primary px-5 py-3">Get Stated</div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="img-fluid" src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-1">Get Stated Digital Learning</h1>
+                  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout..</p>
+                  <div class="btn btn-primary px-5 py-3">Get Stated</div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="img-fluid" src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-1">Get Stated Digital Learning</h1>
+                  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout..</p>
+                  <div class="btn btn-primary px-5 py-3">Get Stated</div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </section>
+     <!-- banner area ends -->
  </main>
 
 
