--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  <!-- header part ends -->
  <main>
     <!-- banner area start -->
-    <section class="container">
+    <section class="container mb-5">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -97,6 +97,114 @@
           </div>
     </section>
      <!-- banner area ends -->
+     <!-- courses area start -->
+     <section class="container mb-5">
+        <h2 class="text-center display-4">Discover Our Popular Courses</h2>
+        <p class="text-center">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+        <div class="row">
+            <div class="col-lg-6 col-md-12 ">
+                <div class="row d-flex justify-content-center pb-3 align-items-center">
+                    <div class="col-sm-4">
+                        <div>
+                            <img src="images/course/course-1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="ps-3">
+                            <h3>Fundamental Of UI/UX Design</h3>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h4 class="text-info">Price: 20$</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row d-flex justify-content-center pb-3 align-items-center">
+                    <div class="col-sm-4">
+                        <div>
+                            <img src="images/course/course-2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="ps-3">
+                            <h3>Javascript Basic to advanced</h3>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h4 class="text-info">Price: 40$</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row d-flex justify-content-center pb-3 align-items-center">
+                    <div class="col-sm-4">
+                        <div>
+                            <img src="images/course/course-3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="ps-3">
+                            <h3>Fullstack Web Development</h3>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h4 class="text-info">Price: 60$</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row d-flex justify-content-center pb-3 align-items-center">
+                    <div class="col-sm-4">
+                        <div>
+                            <img src="images/course/course-4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="ps-3">
+                            <h3>Digital Marketing</h3>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h4 class="text-info">Price: 30$</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row d-flex justify-content-center pb-3 align-items-center">
+                    <div class="col-sm-4">
+                        <div>
+                            <img src="images/course/course-5.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="ps-3">
+                            <h3>Photography Basic Rules</h3>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h4 class="text-info">Price: 20$</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="row d-flex justify-content-center pb-3 align-items-center">
+                    <div class="col-sm-4">
+                        <div>
+                            <img src="images/course/course-6.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="ps-3">
+                            <h3>Motion Graphics</h3>
+                            <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                            <h4 class="text-info">Price: 30$</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+       <div class="text-center mt-5">
+        <div class="btn btn-info py-3 text-white">See More Courses</div>
+       </div>
+     </section>
+     <!-- courses area ends -->
+     
  </main>
 
 
