Explore Section added

--- a/index.html
+++ b/index.html
@@ -204,7 +204,33 @@
        </div>
      </section>
      <!-- courses area ends -->
-     
+     <section class="container background-color">
+        <div class="row align-items-center">
+            <div class="col-lg-5 p-0">
+                <img class="img-fluid" src="images/working.png" alt="">
+            </div>
+            <div class="col-lg-7 ps-5">
+                <h2>Explore The elearning Institute</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+                <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+                <div class="d-flex justify-content-center mb-5">
+                   <div class="pe-3">
+                    <h4>3.2K+</h4>
+                    <h6>Online Course</h6>
+                   </div>
+                   <div class="pe-3">
+                    <h4>600+</h4>
+                    <h6>Expert member</h6>
+                   </div>
+                   <div class="pe-3">
+                    <h4>1k+</h4>
+                    <h6>Rating & Review</h6>
+                   </div>
+                </div>
+                <div class="btn btn-info px-5 py-3">Read More</div>
+            </div>
+        </div>
+     </section>
  </main>
 
 
