Ready to join area added

--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
                 <div class="row d-flex justify-content-center pb-3 align-items-center">
                     <div class="col-sm-4">
                         <div>
-                            <img src="images/course/course-1.png" alt="">
+                            <img class="img-fluid" src="images/course/course-1.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-8">
-                        <div class="ps-3">
+                        <div>
                             <h3>Fundamental Of UI/UX Design</h3>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h4 class="text-info">Price: 20$</h4>
@@ -122,11 +122,11 @@
                 <div class="row d-flex justify-content-center pb-3 align-items-center">
                     <div class="col-sm-4">
                         <div>
-                            <img src="images/course/course-2.png" alt="">
+                            <img class="img-fluid" src="images/course/course-2.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-8">
-                        <div class="ps-3">
+                        <div>
                             <h3>Javascript Basic to advanced</h3>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h4 class="text-info">Price: 40$</h4>
@@ -138,11 +138,11 @@
                 <div class="row d-flex justify-content-center pb-3 align-items-center">
                     <div class="col-sm-4">
                         <div>
-                            <img src="images/course/course-3.png" alt="">
+                            <img class="img-fluid" src="images/course/course-3.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-8">
-                        <div class="ps-3">
+                        <div>
                             <h3>Fullstack Web Development</h3>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h4 class="text-info">Price: 60$</h4>
@@ -154,11 +154,11 @@
                 <div class="row d-flex justify-content-center pb-3 align-items-center">
                     <div class="col-sm-4">
                         <div>
-                            <img src="images/course/course-4.png" alt="">
+                            <img class="img-fluid" src="images/course/course-4.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-8">
-                        <div class="ps-3">
+                        <div>
                             <h3>Digital Marketing</h3>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h4 class="text-info">Price: 30$</h4>
@@ -170,11 +170,11 @@
                 <div class="row d-flex justify-content-center pb-3 align-items-center">
                     <div class="col-sm-4">
                         <div>
-                            <img src="images/course/course-5.png" alt="">
+                            <img class="img-fluid" src="images/course/course-5.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-8">
-                        <div class="ps-3">
+                        <div>
                             <h3>Photography Basic Rules</h3>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h4 class="text-info">Price: 20$</h4>
@@ -186,11 +186,11 @@
                 <div class="row d-flex justify-content-center pb-3 align-items-center">
                     <div class="col-sm-4">
                         <div>
-                            <img src="images/course/course-6.png" alt="">
+                            <img class="img-fluid" src="images/course/course-6.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-8">
-                        <div class="ps-3">
+                        <div>
                             <h3>Motion Graphics</h3>
                             <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
                             <h4 class="text-info">Price: 30$</h4>
@@ -204,12 +204,13 @@
        </div>
      </section>
      <!-- courses area ends -->
-     <section class="container background-color">
+     <!-- explore area start -->
+     <section class="container background-color mb-5">
         <div class="row align-items-center">
-            <div class="col-lg-5 p-0">
+            <div class="col-lg-6 p-0">
                 <img class="img-fluid" src="images/working.png" alt="">
             </div>
-            <div class="col-lg-7 ps-5">
+            <div class="col-lg-6 ps-5">
                 <h2>Explore The elearning Institute</h2>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
                 <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
@@ -231,6 +232,43 @@
             </div>
         </div>
      </section>
+     <!-- explore area ends -->
+
+     <!-- ready to join area start -->
+     <section class="container mb-5">
+      <div class="row d-flex justify-content-center align-items-center bg-primary px-5 py-5 rounded-2">
+        <div class="col-lg-6">
+          <h3 class="text-white display-3">Ready to join?</h3>
+          <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="col-lg-6 d-flex justify-content-center">
+              <!-- Button trigger modal -->
+          <button type="button" class="btn btn-info text-info bg-white px-5 py-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Register Now
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                 <p>Hello World</p> ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
+     <!-- ready to join area ends -->
  </main>
 
 
