--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <img class="img-fluid" src="images/working.png" alt="">
             </div>
             <div class="col-lg-6 ps-5">
-                <h2>Explore The elearning Institute</h2>
+                <h2 class="display-5">Explore The elearning Institute</h2>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
                 <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
                 <div class="d-flex justify-content-center mb-5">
@@ -269,6 +269,52 @@
       </div>
      </section>
      <!-- ready to join area ends -->
+     <section class="container pb-5">
+      <h2 class="display-4">Meet Our Successfull<br> Students</h2>
+      <p>It is a long established fact that a reader will be distracted by the<br> readable content of a page when looking at its layout.</p>
+      <div class="row mb-5">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="images/student/student-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Awlad Hossain</h5>
+                <p class="card-text">UIUX Designer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="images/student/student-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Jannatul Islam</h5>
+                <p class="card-text">Motion Design.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="images/student/student-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Imran Hossain</h5>
+                <p class="card-text">Graphic Designer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="images/student/student-4.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nishi Akter</h5>
+                <p class="card-text">Web Developer.</p>
+              </div>
+            </div>
+          </div>
+          </div>
+          <div class="text-center mt-4">
+            <div class="btn btn-primary px-5 py-3">View All</div>
+          </div>
+     </section>
  </main>
 
 
