--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Digital Education Website</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/d44099ede7.js" crossorigin="anonymous"></script>
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -269,6 +271,8 @@
       </div>
      </section>
      <!-- ready to join area ends -->
+
+     <!-- Students area start -->
      <section class="container pb-5">
       <h2 class="display-4">Meet Our Successfull<br> Students</h2>
       <p>It is a long established fact that a reader will be distracted by the<br> readable content of a page when looking at its layout.</p>
@@ -314,6 +318,57 @@
           <div class="text-center mt-4">
             <div class="btn btn-primary px-5 py-3">View All</div>
           </div>
+     </section>
+     <!-- Students area ends -->
+     <section class="container">
+        <h2 class="text-center">Some Students Feedback</h2>
+        <p class="text-center">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+        <div class="row">
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div>
+              <div class="d-flex justify-content-between align-items-center">
+              <img src="images/comma.png" alt="">
+                <div class="icon">
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                </div>
+              </div>              
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+            </div>
+            <div class="d-flex align-items-center">
+              <img src="images/student/student-6.png" alt="">
+              <div class="ps-3">
+                <h6>Shanta Akter</h6>
+                <p>Graphic Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+            <div>
+              <div class="d-flex justify-content-between align-items-center">
+              <img src="images/comma.png" alt="">
+                <div class="icon">
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                  <a href=""><i class="fa-solid fa-star"></i></a>
+                </div>
+              </div>              
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+            </div>
+            <div class="d-flex align-items-center">
+              <img src="images/student/student-5.png" alt="">
+              <div class="ps-3">
+                <h6>Awlad Hossain</h6>
+                <p>UI Designer</p>
+              </div>
+            </div>
+          </div>
+        </div>
      </section>
  </main>
 
