--- a/index.html
+++ b/index.html
@@ -373,7 +373,9 @@
         </div>
      </section>
      <!-- Students feedback area ends -->
-     <section class="container">
+
+     <!-- Frequently question area start -->
+     <section class="container mb-5">
       <h2 class="text-center">Frequently Asked Questions</h2>
       <p class="text-center">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
       <div class="row">
@@ -431,9 +433,40 @@
         </div>
       </div>
      </section>
+     <!-- Frequently question area ends -->
+
+     <!-- people trusted area start -->
+     <section class="container image-all">
+        <h2 class="text-center mb-5">Trusted by over 800+ companies</h2>
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 d-flex justify-content-evenly align-items-center mb-5">
+            <img class="img-display" src="images/company/company-1.png" alt="">
+            <img class="img-display" src="images/company/company-2.png" alt="">
+            <img class="img-display" src="images/company/company-3.png" alt="">
+            <img class="img-display" src="images/company/company-4.png" alt="">
+            <img class="img-display" src="images/company/company-5.png" alt="">
+            <img class="img-display" src="images/company/company-6.png" alt="">
+          </div>
+        </div>
+     </section>
+     <!-- people trusted area ends -->
  </main>
 
+<footer class="bg-dark">
+  <div class="text-center text-white py-5">
+    <h3>Pro Edu</h3>
+    <p>Office 41, Zawaya Buildin, Ghala Muscat,<br> 
+    Sultanate of Oman</p>
+    <p>Privacy Policy | Terms of use</p>
+    <div class="text-center my-icon">
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-linkedin"></i>
+      <i class="fa-brands fa-pinterest"></i>
+    </div>
+  </div>
 
+</footer>
 
 
 
