Some Modification added

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Courses</a>
+                <a class="nav-link" href="#course">Courses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Deals</a>
+                <a class="nav-link" href="#deals">Deals</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Success</a>
+                <a class="nav-link" href="#success">Success</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Register</a>
@@ -57,7 +57,6 @@
     <!-- banner area start -->
     <section class="container mb-5">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-           
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="img-fluid" src="images/cover/cover-1.png" class="d-block w-100" alt="...">
@@ -95,8 +94,9 @@
           </div>
     </section>
      <!-- banner area ends -->
+
      <!-- courses area start -->
-     <section class="container mb-5">
+     <section id="course" class="container mb-5">
         <h2 class="text-center display-4">Discover Our Popular Courses</h2>
         <p class="text-center">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
         <div class="row">
@@ -203,15 +203,15 @@
      </section>
      <!-- courses area ends -->
      <!-- explore area start -->
-     <section class="container background-color mb-5">
+     <section id="deals" class="container background-color mb-5">
         <div class="row align-items-center">
             <div class="col-lg-6 p-0">
                 <img class="img-fluid" src="images/working.png" alt="">
             </div>
             <div class="col-lg-6 ps-5">
                 <h2 class="display-5">Explore The elearning Institute</h2>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
-                <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+                <p>Looking to hire help from our community of trusted freelancers and agencies? Start by asking yourself these questions.Looking to hire help from our community of trusted freelancers and agencies? Start by asking yourself these questions.Looking to hire help from our community of trusted freelancers and agencies? Start by asking yourself these questions. </p>
+                <p>Looking to hire help from our community of trusted freelancers and agencies? Start by asking yourself these questions.</p>
                 <div class="d-flex justify-content-center mb-5">
                    <div class="pe-3">
                     <h4>3.2K+</h4>
@@ -269,7 +269,7 @@
      <!-- ready to join area ends -->
 
      <!-- Students area start -->
-     <section class="container pb-5">
+     <section id="success" class="container pb-5">
       <h2 class="display-4">Meet Our Successfull<br> Students</h2>
       <p>It is a long established fact that a reader will be distracted by the<br> readable content of a page when looking at its layout.</p>
       <div class="row mb-5">
@@ -318,7 +318,7 @@
      <!-- Students area ends -->
 
      <!-- Students feedback area start -->
-     <section class="container mb-5">
+     <section id="about" class="container mb-5">
         <h2 class="text-center">Some Students Feedback</h2>
         <p class="text-center">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
         <div class="row">
